Fix overflow bug

--- a/src/components/Intro/IntroButtons/introButtons.css
+++ b/src/components/Intro/IntroButtons/introButtons.css
@@ -182,4 +182,8 @@
         gap: .5rem;
         margin-bottom: .5rem;
     }
+
+    .contact-me-button, .resume-button, .github-img, .linkedin-img, .call-img{
+        animation: fadeIn 2.5s forwards;
+    }
 }
